--- a/datasets/NHS-D-Coronavirus-Shielded-Patient-List-Summary-Totals-England/codelists/disease-group.csv-metadata.json
+++ b/datasets/NHS-D-Coronavirus-Shielded-Patient-List-Summary-Totals-England/codelists/disease-group.csv-metadata.json
@@ -30,7 +30,7 @@
                 },
                 "required": false,
                 "propertyUrl": "skos:broader",
-                "valueUrl": "http://gss-data.org.uk/data/gss_data/covid-19/nhs-d-coronavirus-shielded-patient-list-summary-totals-england#concept/disease-group/{parent_notation}"
+                "valueUrl": "http://gss-data.org.uk/data/gss_data/covid-19/nhs-d-coronavirus-shielded-patient-list-summary-totals-england#concept/disease-group/{+parent_notation}"
             },
             {
                 "titles": "Sort Priority",
@@ -58,7 +58,7 @@
             }
         ],
         "primaryKey": "notation",
-        "aboutUrl": "http://gss-data.org.uk/data/gss_data/covid-19/nhs-d-coronavirus-shielded-patient-list-summary-totals-england#concept/disease-group/{notation}"
+        "aboutUrl": "http://gss-data.org.uk/data/gss_data/covid-19/nhs-d-coronavirus-shielded-patient-list-summary-totals-england#concept/disease-group/{+notation}"
     },
     "prov:hadDerivation": {
         "@id": "http://gss-data.org.uk/data/gss_data/covid-19/nhs-d-coronavirus-shielded-patient-list-summary-totals-england#scheme/disease-group",
@@ -84,7 +84,15 @@
             },
             "rdfs:label": "Disease Group",
             "dc:title": "Disease Group",
-            "rdfs:comment": "Dataset representing the 'Disease Group' code list."
+            "rdfs:comment": "Dataset representing the 'Disease Group' code list.",
+            "dc:modified": {
+                "@type": "dateTime",
+                "@value": "2021-05-20T11:48:27.139340"
+            },
+            "dc:issued": {
+                "@type": "dateTime",
+                "@value": "2021-05-20T11:46:42.665988"
+            }
         },
         {
             "@id": "http://gss-data.org.uk/catalog/vocabularies",
