--- a/datasets/ONS-Death-registrations-and-occurrences-by-local-authority-and-health-board/codelists/death-measure.csv-metadata.json
+++ b/datasets/ONS-Death-registrations-and-occurrences-by-local-authority-and-health-board/codelists/death-measure.csv-metadata.json
@@ -32,7 +32,7 @@
                 },
                 "required": false,
                 "propertyUrl": "skos:broader",
-                "valueUrl": "http://gss-data.org.uk/data/gss_data/covid-19/ons-death-registrations-and-occurrences-by-local-authority-and-health-board#concept/death-measure/{parent_notation}"
+                "valueUrl": "http://gss-data.org.uk/data/gss_data/covid-19/ons-death-registrations-and-occurrences-by-local-authority-and-health-board#concept/death-measure/{+parent_notation}"
             },
             {
                 "titles": "Sort Priority",
@@ -53,7 +53,7 @@
             }
         ],
         "primaryKey": "notation",
-        "aboutUrl": "http://gss-data.org.uk/data/gss_data/covid-19/ons-death-registrations-and-occurrences-by-local-authority-and-health-board#concept/death-measure/{notation}"
+        "aboutUrl": "http://gss-data.org.uk/data/gss_data/covid-19/ons-death-registrations-and-occurrences-by-local-authority-and-health-board#concept/death-measure/{+notation}"
     },
     "prov:hadDerivation": {
         "@id": "http://gss-data.org.uk/data/gss_data/covid-19/ons-death-registrations-and-occurrences-by-local-authority-and-health-board#scheme/death-measure",
@@ -99,7 +99,7 @@
             },
             "dc:modified": {
                 "@type": "dateTime",
-                "@value": "2020-12-30T00:00:00"
+                "@value": "2021-05-20T11:48:27.165328"
             }
         },
         {
